--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html>
 
 <head>
   <meta charset="utf-8">
@@ -31,7 +31,7 @@
         <div class="bottom-menu">
           <div class="left">
             <a href="#">
-              <img src="/src/img/osaka.png" />
+              <img src="https://www.aliceplatform.com/hubfs/alice-app-logo-transparent-1.png" />
             </a>
           </div>
           <div class="right-menu">
@@ -70,71 +70,61 @@
             </div> -->
           </div>
         </div>
-
       </div>
-
     </div>
     <div class="growing">
       <div class="growing-wrapper">
         <ul>
           <li class="growing-item">
-
-            <p class="Hoteliers">21,000+
-              <span>Hoteliers
-              </span>
+            <p class="Hoteliers text-style-1">21,000+
             </p>
-
+            <br>
+            <span>Hoteliers
+            </span>
           </li>
           <li class="growing-item">
-
-            <p class="Hoteliers">2,000+
-              <span>Hotels</span>
+            <p class="Hoteliers text-style-1">2,000+
             </p>
-
+            <br>
+            <span>Hotels</span>
           </li>
           <li class="growing-item">
-
-            <p class="Hoteliers">100+
-              <span>ALICE Team</span>
+            <p class="Hoteliers text-style-1">100+
             </p>
-
+            <br>
+            <span>ALICE Team</span>
           </li>
           <li class="growing-item">
-
-            <p class="Hoteliers">75
-              <span>Countries</span>
+            <p class="Hoteliers text-style-1">75
             </p>
-
+            <br>
+            <span>Countries</span>
           </li>
           <li class="growing-item">
-
-            <p class="Hoteliers">40M
-              <span>Investestment</span>
+            <p class="Hoteliers text-style-1">40M
             </p>
-
+            <br>
+            <span>Investestment</span>
           </li>
           <li class="growing-item">
-
-            <p class="Hoteliers">5
-              <span>Years</span>
+            <p class="Hoteliers text-style-1">5
             </p>
-
+            <br>
+            <span>Years</span>
           </li>
           <li class="growing-item">
-
-            <p class="Hoteliers">1
-              <span>Vision</span>
+            <p class="Hoteliers text-style-1">1
             </p>
-
+            <br>
+            <span>Vision</span>
           </li>
-          <li class="growing-item">
-
-            <p class="Hoteliers">We are Growing
-              <span>
-                <a href="#">Join US</a>
-              </span>
+          <li class="growing-item width-150">
+            <p class="Hoteliers text-style-1">We are Growing
             </p>
-
+            <br>
+            <span>
+              <a href="#">Join US</a>
+            </span>
           </li>
         </ul>
       </div>
@@ -143,7 +133,127 @@
       <img src="line-below-1@2x.png" class="line-below" alt="line-below">
     </div>
   </div>
-  <div></div>
+  <div class="enhance">
+    <div class="enhance-wrapper">
+      <div class="rectangle"></div>
+      <div>
+        <h3>Hoteliers create hospitality, Hotels house hospitality, ALICE enhances hospitality</h3>
+      </div>
+      <div>
+        <p>
+          <span>Upgrade guest satisfaction & operational excellence: ALICE is a Hotel Operations Platform </span>enabling staff
+          to interact with both the guest and each other to deliver the best service possible. </p>
+      </div>
+      <div>
+        <img src="alice-intro-top@2x.png" alt="alice-intro-top@2x.png" title="alice-intro-top@2x.png">
+      </div>
+    </div>
+  </div>
+  <div class="partner-choice">
+    <div class="partner-choice-wrapper">
+      <div class="rectangle"></div>
+      <div class="left">
+        <h3>Partners that choose ALICE </h3>
+      </div>
+      <div>
+        <a href="#" class="schedule-demo text-black right">WORK WITH US</a>
+      </div>
+      <div class="partners">
+        <ul>
+          <li>
+            <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-1@2x.png"
+              alt="">
+          </li>
+          <li>
+            <div class="sales">
+              <img width="27" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Website/Products/201805/Alice%20Suite/QuotesRuby01@2x.png?t=1535134008532&width=62&height=46&name=QuotesRuby01@2x.png"
+                alt="">
+              <p>No one can drop the ball with ALICE” Director of Operations, Radisson Hotel El Paso </p>
+            </div>
+          </li>
+          <li>
+            <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-3@2x.png"
+              alt="">
+          </li>
+          <li>
+            <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-2@2x.png"
+              alt="">
+          </li>
+          <li>
+            <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-4@2x.png"
+              alt="">
+          </li>
+          <li>
+            <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-5@2x.png"
+              alt="">
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="better">
+    <div class="better-wrapper">
+      <div class="rectangle"></div>
+      <div>
+        <h3>Make your hotel, your team, and you - better</h3>
+      </div>
+      <div class="better-sub-wrapper">
+        <div class="left">
+          <p class="alice-offers-text">ALICE offers platform of solutions for the hotelier that creates a unified hospitality experience, fostering meaningful
+            relationships with guests and connecting departments across the hotel. Pivotally, ALICE aligns staff for superior
+            performance.
+          </p>
+          <br>
+          <p class="alice-offers-text">With one connected suite, staff interact with the guest and each other with ease. Managers can see deep into the
+            core of the hotel operations, diagnose, and resolve the root cause of snafus, areas of friction, organizational
+            ailments and system disorders.</p>
+        </div>
+        <div class="right">
+          <img width="770" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Home/Images/201806/platform@2x.png?t=1535134008532&width=1576&name=platform@2x.png"
+            alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="forbes">
+    <div class="forbes-wrapper">
+      <div class="forbes-sub-wrapper">
+        <div class="left forbes-logo">
+          <img class="left" width="130" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Home/Images/201804/logo%20forbes@2x.png"
+            alt="logoforbes@2x">
+          <div class="left">
+            <img width="31" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Website/Products/201805/Alice%20Suite/QuotesRuby01@2x.png"
+              alt="">
+            <p class="forbes-logo-text">We are extremely pleased to select ALICE as the Official Guest Service Technology of Forbes Travel Guide. It
+              is essential that staff members at a hotel communicate with each other to satisfy many of the 900 standards
+              by which we evaluate a property. ALICE personalizes its product to meet the needs of each property with whom
+              it partners.”</p>
+          </div>
+        </div>
+        <div class="right">
+          <div class="left">
+
+            <img width="260" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Home/Images/201804/badge-2018@2x.png" alt="">
+          </div>
+          <div class="left">
+            <h4>AWARDED</h4>
+            <ul>
+              <li>
+                <p>> Best Concierge Software</p>
+              </li>
+              <li>
+                <p> Best Staff Task Management & Collaboration Software Finalist</p>
+              </li>
+              <li>
+                <p>> Best Place to Work in Hotel Tech</p>
+              </li>
+            </ul>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
