--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
               is essential that staff members at a hotel communicate with each other to satisfy many of the 900 standards
               by which we evaluate a property. ALICE personalizes its product to meet the needs of each property with whom
               it partners.”</p>
+            <p class="gerard-text">– Gerard J. Inzerillo, CEO of Forbes Travel Guide</p>
           </div>
         </div>
         <div class="right">
@@ -237,12 +238,12 @@
           </div>
           <div class="left">
             <h4>AWARDED</h4>
-            <ul>
+            <ul class="award-list">
               <li>
                 <p>> Best Concierge Software</p>
               </li>
               <li>
-                <p> Best Staff Task Management & Collaboration Software Finalist</p>
+                <p>> Best Staff Task Management & Collaboration Software Finalist</p>
               </li>
               <li>
                 <p>> Best Place to Work in Hotel Tech</p>
