css forbes left

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
       </div>
       <div>
         <p>
-          <span>Upgrade guest satisfaction & operational excellence: ALICE is a Hotel Operations Platform </span>enabling staff
-          to interact with both the guest and each other to deliver the best service possible. </p>
+          <span>Upgrade guest satisfaction & operational excellence: ALICE is a Hotel Operations Platform </span>
+          <br>enabling staff to interact with both the guest and each other to deliver the best service possible. </p>
       </div>
-      <div>
+      <div class="alice-intro-top">
         <img src="alice-intro-top@2x.png" alt="alice-intro-top@2x.png" title="alice-intro-top@2x.png">
       </div>
     </div>
@@ -168,7 +168,8 @@
             <div class="sales">
               <img width="27" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Website/Products/201805/Alice%20Suite/QuotesRuby01@2x.png?t=1535134008532&width=62&height=46&name=QuotesRuby01@2x.png"
                 alt="">
-              <p>No one can drop the ball with ALICE” Director of Operations, Radisson Hotel El Paso </p>
+              <p class="No-one-can-drop-the text-style-1">No one can drop the ball with ALICE”
+                <span class="text-style-1">Director of Operations, </span>Radisson Hotel El Paso </p>
             </div>
           </li>
           <li>
@@ -199,9 +200,10 @@
       </div>
       <div class="better-sub-wrapper">
         <div class="left">
-          <p class="alice-offers-text">ALICE offers platform of solutions for the hotelier that creates a unified hospitality experience, fostering meaningful
-            relationships with guests and connecting departments across the hotel. Pivotally, ALICE aligns staff for superior
-            performance.
+          <p class="alice-offers-text padding-top-text">
+            <span class="bolder">ALICE offers platform of solutions for the hotelier that creates a unified hospitality experience, fostering
+              meaningful relationships with guests and connecting departments across the hotel.</span> Pivotally, ALICE aligns
+            staff for superior performance.
           </p>
           <br>
           <p class="alice-offers-text">With one connected suite, staff interact with the guest and each other with ease. Managers can see deep into the
