--- a/index.html
+++ b/index.html
@@ -132,100 +132,102 @@
     <div>
       <img src="line-below-1@2x.png" class="line-below" alt="line-below">
     </div>
-  </div>
-  <div class="enhance">
-    <div class="enhance-wrapper">
-      <div class="rectangle"></div>
-      <div>
-        <h3>Hoteliers create hospitality, Hotels house hospitality, ALICE enhances hospitality</h3>
-      </div>
-      <div>
-        <p>
-          <span>Upgrade guest satisfaction & operational excellence: ALICE is a Hotel Operations Platform </span>
-          <br>enabling staff to interact with both the guest and each other to deliver the best service possible. </p>
-      </div>
-      <div class="alice-intro-top">
-        <img src="alice-intro-top@2x.png" alt="alice-intro-top@2x.png" title="alice-intro-top@2x.png">
-      </div>
-    </div>
-  </div>
-  <div class="partner-choice">
-    <div class="partner-choice-wrapper">
-      <div class="rectangle"></div>
-      <div class="left">
-        <h3>Partners that choose ALICE </h3>
-      </div>
-      <div>
-        <a href="#" class="schedule-demo text-black right">WORK WITH US</a>
-      </div>
-      <div class="partners">
-        <ul>
-          <li>
-            <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-1@2x.png"
-              alt="">
-          </li>
-          <li>
-            <div class="sales">
-              <img width="27" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Website/Products/201805/Alice%20Suite/QuotesRuby01@2x.png?t=1535134008532&width=62&height=46&name=QuotesRuby01@2x.png"
-                alt="">
-              <p class="No-one-can-drop-the text-style-1">No one can drop the ball with ALICE”
-                <span class="text-style-1">Director of Operations, </span>Radisson Hotel El Paso </p>
-            </div>
-          </li>
-          <li>
-            <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-3@2x.png"
-              alt="">
-          </li>
-          <li>
-            <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-2@2x.png"
-              alt="">
-          </li>
-          <li>
-            <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-4@2x.png"
-              alt="">
-          </li>
-          <li>
-            <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-5@2x.png"
-              alt="">
-          </li>
-        </ul>
+
+    <div class="enhance">
+      <div class="enhance-wrapper">
+        <div class="rectangle"></div>
+        <div>
+          <h3>Hoteliers create hospitality, Hotels house hospitality, ALICE enhances hospitality</h3>
+        </div>
+        <div>
+          <p>
+            <span>Upgrade guest satisfaction & operational excellence: ALICE is a Hotel Operations Platform </span>
+            <br>enabling staff to interact with both the guest and each other to deliver the best service possible. </p>
+        </div>
+        <div class="alice-intro-top">
+          <img src="alice-intro-top@2x.png" alt="alice-intro-top@2x.png" title="alice-intro-top@2x.png">
+        </div>
       </div>
     </div>
-  </div>
-  <div class="better">
-    <div class="better-wrapper">
-      <div class="rectangle"></div>
-      <div>
-        <h3>Make your hotel, your team, and you - better</h3>
-      </div>
-      <div class="better-sub-wrapper">
+    <div class="partner-choice">
+      <div class="partner-choice-wrapper">
+        <div class="rectangle"></div>
         <div class="left">
-          <p class="alice-offers-text padding-top-text">
-            <span class="bolder">ALICE offers platform of solutions for the hotelier that creates a unified hospitality experience, fostering
-              meaningful relationships with guests and connecting departments across the hotel.</span> Pivotally, ALICE aligns
-            staff for superior performance.
-          </p>
-          <br>
-          <p class="alice-offers-text">With one connected suite, staff interact with the guest and each other with ease. Managers can see deep into the
-            core of the hotel operations, diagnose, and resolve the root cause of snafus, areas of friction, organizational
-            ailments and system disorders.</p>
+          <h3>Partners that choose ALICE </h3>
         </div>
-        <div class="right">
-          <img width="770" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Home/Images/201806/platform@2x.png?t=1535134008532&width=1576&name=platform@2x.png"
-            alt="">
+        <div>
+          <a href="#" class="schedule-demo text-black right">WORK WITH US</a>
+        </div>
+        <div class="partners">
+          <ul>
+            <li>
+              <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-1@2x.png"
+                alt="">
+            </li>
+            <li>
+              <div class="sales">
+                <img width="27" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Website/Products/201805/Alice%20Suite/QuotesRuby01@2x.png?t=1535134008532&width=62&height=46&name=QuotesRuby01@2x.png"
+                  alt="">
+                <p class="No-one-can-drop-the text-style-1">No one can drop the ball with ALICE”
+                  <span class="text-style-1">Director of Operations, </span>Radisson Hotel El Paso </p>
+              </div>
+            </li>
+            <li>
+              <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-3@2x.png"
+                alt="">
+            </li>
+            <li>
+              <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-2@2x.png"
+                alt="">
+            </li>
+            <li>
+              <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-4@2x.png"
+                alt="">
+            </li>
+            <li>
+              <img width="199" height="200" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/partner-5@2x.png"
+                alt="">
+            </li>
+          </ul>
         </div>
       </div>
     </div>
-  </div>
-  <div class="forbes">
-    <div class="forbes-wrapper">
-      <div class="forbes-sub-wrapper">
-        <div class="left forbes-logo">
-          <img class="left" width="130" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Home/Images/201804/logo%20forbes@2x.png"
-            alt="logoforbes@2x">
+    <div class="better">
+      <div class="better-wrapper">
+        <div class="rectangle"></div>
+        <div>
+          <h3>Make your hotel, your team, and you - better</h3>
+        </div>
+        <div class="better-sub-wrapper">
           <div class="left">
-            <img width="31" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Website/Products/201805/Alice%20Suite/QuotesRuby01@2x.png"
+            <p class="alice-offers-text padding-top-text">
+              <span class="bolder">ALICE offers platform of solutions for the hotelier that creates a unified hospitality experience, fostering
+                meaningful relationships with guests and connecting departments across the hotel.</span> Pivotally, ALICE
+              aligns staff for superior performance.
+            </p>
+            <br>
+            <p class="alice-offers-text">With one connected suite, staff interact with the guest and each other with ease. Managers can see deep into
+              the core of the hotel operations, diagnose, and resolve the root cause of snafus, areas of friction, organizational
+              ailments and system disorders.</p>
+          </div>
+          <div class="right">
+            <img width="770" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Home/Images/201806/platform@2x.png?t=1535134008532&width=1576&name=platform@2x.png"
               alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="forbes">
+      <div class="forbes-wrapper">
+        <div class="left forbes-logo">
+          <div class="left">
+            <img width="130" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Home/Images/201804/logo%20forbes@2x.png" alt="logoforbes@2x">
+          </div>
+
+          <div class="right">
+            <img width="33" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Website/Products/201805/Alice%20Suite/QuotesRuby01@2x.png"
+              alt="">
+
             <p class="forbes-logo-text">We are extremely pleased to select ALICE as the Official Guest Service Technology of Forbes Travel Guide. It
               is essential that staff members at a hotel communicate with each other to satisfy many of the 900 standards
               by which we evaluate a property. ALICE personalizes its product to meet the needs of each property with whom
@@ -236,7 +238,8 @@
         <div class="right">
           <div class="left">
 
-            <img width="260" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Home/Images/201804/badge-2018@2x.png" alt="">
+            <img width="260" class="award-img" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Home/Images/201804/badge-2018@2x.png"
+              alt="">
           </div>
           <div class="left">
             <h4>AWARDED</h4>
@@ -254,8 +257,231 @@
 
           </div>
         </div>
+
       </div>
     </div>
+    <div class="row">
+      <div class="main">
+        <div class="main-wrapper">
+          <div class="rectangle"></div>
+          <div class="suite-text">
+            <span class="header-text">Proof - share this with your boss
+            </span>
+          </div>
+
+        </div>
+      </div>
+      <div class="content">
+        <div class="content-wrapper">
+          <div class="col-1 details left">
+
+            <div class="details-numbers"> 2,400 </div>
+            <div class="details-tagline"> ALICE Measurement: GHT (Guest Happiness Tasks per Hour) </div>
+            <div class="details-description"> Simultaneous tasks worldwide being sent to satisfy guests on the ALICE platform. Our (BHAG) goal by the end of
+              2018 - 5,000 GHT </div>
+
+
+          </div>
+          <div class="col-2 details left">
+
+            <div class="details-numbers"> 1.5M </div>
+            <div class="details-tagline"> Reviews matter. We count the ones we help you earn. </div>
+            <div class="details-description"> A 5-star review means money for your hotel. ALICE helps you get and keep the best ratings possible.
+            </div>
+
+
+          </div>
+          <div class="col-3 details left">
+
+            <div class="details-numbers"> 5,014 </div>
+            <div class="details-tagline"> Departments work better together. That's why they love ALICE.&nbsp; </div>
+            <div class="details-description"> ALICE facilitates perfect communication and teamwork across departments, both Front and Back of House
+            </div>
+
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="main">
+      <div class="main-wrapper">
+        <div class="rectangle"></div>
+        <div class="suite-text">
+          <span class="header-text">Testimonials
+          </span>
+        </div>
+
+      </div>
+    </div>
+    <div class="testi-content">
+      <div class="testi-content-wrapper">
+
+        <div class="slider-testi-content left">
+          <div class="slider-quote">
+            <img width="27" src="QuotesRuby01@2x .png" />
+          </div>
+          <div class="slider-quote-given">No one can drop the ball with ALICE”</div>
+          <div class="slider-quote-giver">Director of Operations,</div>
+          <div class="slider-hotel-name">Radisson Hotel El Paso </div>
+        </div>
+
+        <div class="slider-testi-content left">
+          <div class="slider-quote">
+            <img width="27" src="QuotesRuby01@2x .png" /> </div>
+          <div class="slider-quote-given">
+            <span>Hospitality is a tough job. ALICE has made our lives easier”</span>
+          </div>
+          <div class="slider-quote-giver">Front Office Manager,</div>
+          <div class="slider-hotel-name">Wythe Hotel</div>
+        </div>
+
+        <div class="slider-testi-content left">
+          <div class="slider-quote">
+            <img width="27" src="QuotesRuby01@2x .png" /> </div>
+          <div class="slider-quote-given">
+            <span>ALICE allows all of our departments to interact with each other in a single platform”</span>
+          </div>
+          <div class="slider-quote-giver">Executive Vice President,</div>
+          <div class="slider-hotel-name">The Amsterdam Hospitality Group </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="schedule-main">
+      <div class="schedule-main-wrapper">
+
+        <div class="rectangle"></div>
+        <div class="suite-text">
+          <div class="sch-left">
+            <span class="header-text">Our Clients Include</span>
+          </div>
+          <div class="sch-right">
+            <a class="cta_button">Work WITH US</a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="schedule-content">
+      <div class="schedule-content-wrapper">
+        <div class="schedule-main-slider">
+          <div>
+            <div class="schedule-slider left">
+              <div class="table-cell">
+                <a href="#">
+                  <img src="https://www.aliceplatform.com/hubfs/2018Redesign/Website/Products/201805/Alice%20Concierge/client-logo-3@2x.png"
+                    alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="schedule-slider left">
+            <div class="table-cell">
+              <a href="#">
+                <img src="https://www.aliceplatform.com/hubfs/2018Redesign/Website/Products/201805/Alice%20Concierge/client-logo-1@2x.png"
+                  alt="">
+              </a>
+            </div>
+          </div>
+
+          <div class="schedule-slider left">
+            <div class="table-cell">
+              <a href="#">
+                <img src="https://www.aliceplatform.com/hubfs/2018Redesign/Website/Products/201805/Alice%20Concierge/client-logo-5@2x.png"
+                  alt="">
+              </a>
+            </div>
+          </div>
+          <div class="schedule-slider left">
+            <div class="table-cell">
+              <a href="#">
+                <img src="https://www.aliceplatform.com/hubfs/2018Redesign/Website/Products/201805/Alice%20Concierge/client-logo-5@2x.png"
+                  alt="">
+              </a>
+            </div>
+          </div>
+          <div class="schedule-slider left">
+            <div class="table-cell">
+              <a href="#">
+                <img src="https://www.aliceplatform.com/hubfs/2018Redesign/Website/Products/201805/Alice%20Concierge/client-logo-5@2x.png"
+                  alt="">
+              </a>
+              <div class="table-cell">
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="aliceway-main">
+      <div class="aliceway-main-wrapper">
+        <div class="rectangle"></div>
+        <div class="suite-text">
+          <span class="header-text">How we do it - the ALICE way
+          </span>
+        </div>
+
+      </div>
+    </div>
+    <div class="aliceway-text">
+      <div class="aliceway-text-wrapper">
+        <div class="how-we-do-description">
+          <strong>At ALICE we pride ourselves on doing our homework. We dream and we do. We model and make</strong>. It’s not enough
+          to encounter pie-in-the-sky insights about hotels and hoteliers - and then leave it them untouched. Working at
+          ALICE requires active listening - conversations with instead of speaking to. We bake these insights into our platform,
+          into the tool, into our phenomenal support, and into our hand-picked team. In short, we work with our partners
+          to build the future. That’s ALICE.
+        </div>
+      </div>
+    </div>
+    <div class="main-cta-button">
+      <div class="main-cta-button-wrapper">
+        <a class="cta_button">LEARN ABOUT OUR VALUES</a>
+      </div>
+      <img width="1440" src="https://www.aliceplatform.com/hubfs/2018Redesign/Home/Images/201806/team-photo@2x.png?t=1529768747578">
+    </div>
+    <footer class="footer ">
+
+      <div class="footer-wrapper ">
+        <div class="footer-area left ">
+          <a href="# ">Privacy Policy</a>
+          <a href="# ">Terms of Use</a>
+          <a href="# ">GDPR Compliance</a>
+          <a href="# ">Careers</a>
+          <a href="# ">Support</a>
+          <a href="# ">Contact Us</a>
+        </div>
+        <div class="app-social left ">
+          <div class="app-social-wrapper ">
+            <div class="apple-logo left ">
+              <img src="https://www.aliceplatform.com/hubfs/new-footer/app-store.png" width="113 " />
+            </div>
+            <div class="google-logo left ">
+              <img src="https://www.aliceplatform.com/hubfs/new-footer/google-play.png" width="113 " />
+            </div>
+            <div class="social-img left ">
+
+              <div>
+                <a href="#">
+                  <img src="https://www.aliceplatform.com/hubfs/2018Redesign/General/Footer/twitter-gray@3x.png" width="28" />
+                </a>
+
+                <a href="#" class="padding-left">
+                  <img src="https://www.aliceplatform.com/hubfs/2018Redesign/General/Footer/facebook-gray@3x.png" width="28" />
+                </a>
+
+                <a href="#" class="padding-left">
+                  <img src="https://www.aliceplatform.com/hubfs/2018Redesign/General/Footer/linked-in-gray@3x.png" width="28" />
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
   </div>
 </body>
 
