--- a/index.html
+++ b/index.html
@@ -63,11 +63,7 @@
               </div>
 
             </div>
-            <!-- <div class="banner-right right">
-              <div class="placeholder">
-                <p>Are you attending HITEC Houston?</p>
-              </div>
-            </div> -->
+
           </div>
         </div>
       </div>
@@ -319,7 +315,8 @@
 
         <div class="slider-testi-content left">
           <div class="slider-quote">
-            <img width="27" src="QuotesRuby01@2x .png" />
+            <img width="27" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Website/Products/201805/Alice%20Suite/QuotesRuby01@2x.png"
+            />
           </div>
           <div class="slider-quote-given">No one can drop the ball with ALICE”</div>
           <div class="slider-quote-giver">Director of Operations,</div>
@@ -328,7 +325,8 @@
 
         <div class="slider-testi-content left">
           <div class="slider-quote">
-            <img width="27" src="QuotesRuby01@2x .png" /> </div>
+            <img width="27" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Website/Products/201805/Alice%20Suite/QuotesRuby01@2x.png"
+            /> </div>
           <div class="slider-quote-given">
             <span>Hospitality is a tough job. ALICE has made our lives easier”</span>
           </div>
@@ -338,7 +336,8 @@
 
         <div class="slider-testi-content left">
           <div class="slider-quote">
-            <img width="27" src="QuotesRuby01@2x .png" /> </div>
+            <img width="27" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Website/Products/201805/Alice%20Suite/QuotesRuby01@2x.png"
+            /> </div>
           <div class="slider-quote-given">
             <span>ALICE allows all of our departments to interact with each other in a single platform”</span>
           </div>
@@ -411,6 +410,24 @@
               </div>
 
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="growth">
+      <div class="growth-wrapper">
+        <div class="rectangle"></div>
+        <div class="growth-main">
+          <h3 class="alice-growth">ALICE Growth </h3>
+          <div>
+            <div>
+              <p class="lorem-ipsum-dolor-si">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget massa tempor, dictum sapien at, aliquam
+                dolor. Quisque hendrerit efficitur lacinia. Cras pellentesque, neque at aliquet tincidunt, felis ante tempus
+                fringilla nec”</p>
+            </div>
+            <img class="building-img" src="https://www.aliceplatform.com/hs-fs/hubfs/2018Redesign/Home/Images/201806/Growth%20Graph/growth-graphic-tabs.png"
+              alt="">
           </div>
         </div>
       </div>
